<?xml version="1.0" encoding="utf-8"?>
<resources>

   <string name="app_name">Sketch A Pic</string>
   <string name="action_settings">Settings</string>
   <string name="clearstring">Clear</string>
   <string name="hello_world">Hello world!</string>
   <string name="backgroundstring">Background Color</string>
   <string name="penstring">Pen Color</string>
     <string name="iconstring">Add Icon</string>
   <string name="blue">Blue</string>
    <string name="red">Red</string>
     <string name="yellow">Yellow</string>
       <string name="purple">Purple</string>
    <string name="orange">Orange</string>
     <string name="green">Green</string>
      <string name="yellowbackgroundstring">Yellow</string>
      <string name="redbackgroundstring">Red</string>
              <string name="bluebackgroundstring">Blue</string>
                 <string name="greenbackgroundstring">Green</string>
                 <string name="desc">String</string>
   

</resources>