<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
   xmlns:tools="http://schemas.android.com/tools"
   android:id="@+id/frame"
   tools:context=".MainActivity"
   android:layout_width="fill_parent"
   android:layout_height="fill_parent"
   android:orientation="vertical" >
  <TableLayout 
   android:layout_width="match_parent"
   android:stretchColumns="1"
   android:shrinkColumns="1"
 android:layout_height="wrap_content"  android:layout_gravity="center_vertical">
   <TableRow android:id="@+id/firstrow">
       <ImageButton android:id="@+id/clearbutton"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:text="@string/clearstring"
       android:src="@drawable/clear"
       android:contentDescription="@string/desc"
       />
      <ImageButton android:id="@+id/redbackground"
       android:layout_width="100dp"
       android:layout_height="50dp"
       android:text="@string/redbackgroundstring"
       android:src="@drawable/red"
       android:contentDescription="@string/desc"
         />      
      <ImageButton android:id="@+id/bluebackground"
       android:layout_width="100dp"
       android:layout_height="50dp"
       android:text="@string/bluebackgroundstring"
        android:src="@drawable/blue"
        android:contentDescription="@string/desc"
        />   
       <ImageButton android:id="@+id/yellowbackground"
       android:layout_width="100dp"
       android:layout_height="50dp"
       android:text="@string/yellowbackgroundstring"
       android:src="@drawable/yellow"
       android:contentDescription="@string/desc"
     />      
      <ImageButton android:id="@+id/greenbackground"
       android:layout_width="100dp"
       android:layout_height="50dp"
       android:text="@string/greenbackgroundstring"
       android:src="@drawable/green"
       android:contentDescription="@string/desc"
   />   
    </TableRow>   
    <TableRow android:id="@+id/secondrow">
      <Button android:id="@+id/iconbutton"
       android:layout_width="200dp"
       android:layout_height="50dp"
       android:text="@string/iconstring"
    /> 
     
    <ImageButton android:id="@+id/redpen"
       android:layout_width="100dp"
       android:layout_height="50dp"
       android:text="@string/redbackgroundstring"
       android:src="@drawable/redpen"
       android:contentDescription="@string/desc"
         />      
      <ImageButton android:id="@+id/bluepen"
       android:layout_width="100dp"
       android:layout_height="50dp"
       android:text="@string/bluebackgroundstring"
       android:src="@drawable/bluepen"
       android:contentDescription="@string/desc"
        />   
    <ImageButton android:id="@+id/yellowpen"
       android:layout_width="100dp"
       android:layout_height="50dp"
       android:text="@string/yellowbackgroundstring"
       android:src="@drawable/yellowpen"
       android:contentDescription="@string/desc"
     />      
      <ImageButton android:id="@+id/greenpen"
       android:layout_width="100dp"
       android:layout_height="50dp"
       android:text="@string/greenbackgroundstring"
       android:src="@drawable/greenpen"
       android:contentDescription="@string/desc"
   />      
     </TableRow>

 
   </TableLayout>  
     <com.example.sketchapic.DrawView android:id="@+id/paper"
         android:layout_width="match_parent"
         android:layout_height="750dp"
         android:background="@color/red"
          /> 
    </LinearLayout>
